[package]
name = "onnx-genai-scheduler"
description = "Continuous batching and preemption scheduler for LLM inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["llm", "inference", "scheduler", "batching"]
categories = ["concurrency", "science"]

[dependencies]
onnx-genai-kv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
