[package]
name = "onnx-genai-scheduler"
description = "Continuous batching and preemption scheduler for LLM inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["llm", "inference", "scheduler", "batching"]
categories = ["concurrency", "science"]

[dependencies]
onnx-genai-kv = { workspace = true }
onnx-runtime-protocol-trace = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Enables the test-only independent replay-checker harness for the pressure
# protocol conformance campaigns.
onnx-runtime-protocol-trace = { workspace = true, features = ["conformance"] }
