[package]
name = "onnx-genai-server"
description = "OpenAI-compatible HTTP server for onnx-genai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "server"]
categories = ["web-programming::http-server", "science"]

[features]
default = ["metrics"]
# Exposes the allocation-free atomic registry at GET /metrics in Prometheus format.
metrics = []

[dependencies]
onnx-genai = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-metadata = { workspace = true }
onnx-genai-ort = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tokio-stream = { workspace = true }
getrandom = "0.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tower = { workspace = true }
