[package]
name = "onnx-genai-server"
description = "OpenAI-compatible HTTP server for onnx-genai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "server"]
categories = ["web-programming::http-server", "science"]

[features]
default = ["metrics"]
# Exposes the allocation-free atomic registry at GET /metrics in Prometheus format.
metrics = []
# Enables profiling integration hooks. Perfetto and OTLP exporters remain deferred.
profiling = []
# Enables the ORT and native-runtime CUDA execution providers (build on a CUDA host, e.g. H200).
cuda = ["onnx-genai-ort/cuda", "onnx-genai-engine/cuda"]
# ONNX Runtime CUDA only: enable ONNX Runtime's built-in CUDAExecutionProvider
# (CUDA 13) plus the cudarc GPU sampler in `onnx-genai-ort`, WITHOUT the
# nxrt-native CUDA kernel crate. This is what the `onnx-genai-server` wheel's
# CUDA build uses; GPU ONNX Runtime comes from the `onnxruntime-gpu` wheel.
ort-cuda = ["onnx-genai-ort/cuda", "onnx-genai-ort/cuda-13000", "onnx-genai-engine/ort-cuda"]
# CUDA API version passthroughs, forwarded to `onnx-genai-ort`/`onnx-genai-engine`.
cuda-12060 = ["onnx-genai-ort/cuda-12060", "onnx-genai-engine/cuda-12060"]
cuda-12080 = ["onnx-genai-ort/cuda-12080", "onnx-genai-engine/cuda-12080"]
cuda-12090 = ["onnx-genai-ort/cuda-12090", "onnx-genai-engine/cuda-12090"]
cuda-13000 = ["onnx-genai-ort/cuda-13000", "onnx-genai-engine/cuda-13000"]
# Enables native decoder execution for models containing native-only operators.
native-backend = ["onnx-genai-engine/native-backend"]
mlas = ["native-backend", "onnx-genai-engine/mlas"]

[dependencies]
onnx-genai = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-metadata = { workspace = true }
# default-features = false so the workspace default `cuda-12060` version selector
# is NOT unified in. Otherwise enabling `ort-cuda` (which adds `cuda-13000`) would
# activate BOTH cudarc CUDA-version feature sets and fail to compile (cudarc's
# generated bindings allow exactly one). Matches onnx-genai-engine / onnx-genai.
onnx-genai-ort = { path = "../onnx-genai-ort", version = "=0.1.0-dev.2", default-features = false }
onnx-genai-preprocess = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
tokio-stream = { workspace = true }
getrandom = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
tower = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
