[package]
name = "onnx-genai"
description = "Rust inference runtime for generative AI models on ONNX Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "genai"]
categories = ["science", "text-processing"]

[dependencies]
onnx-genai-metadata = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-scheduler = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-ort = { workspace = true }
onnx-genai-preprocess = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "onnx-genai"
path = "src/bin/onnx-genai.rs"
