[package]
name = "onnx-rs-python"
description = "Python (PyO3/abi3) bindings for onnx-rs model serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "onnx_rs"
crate-type = ["cdylib"]

[dependencies]
onnx-rs = { workspace = true }
onnx-runtime-loader = { workspace = true }

[dependencies.pyo3]
version = "0.29"
features = ["extension-module", "abi3-py310"]
