[package]
name = "onnx-rs-python"
description = "Python (PyO3/abi3) bindings for onnx-rs model serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "onnx_rs"
crate-type = ["cdylib"]

[dependencies]
onnx-rs = { workspace = true }
onnx-runtime-loader = { workspace = true }

[dependencies.pyo3]
version = "0.29"
features = ["abi3-py310"]

[features]
default = []
# Wheel builds should enable this feature. Keeping it out of normal workspace
# builds lets Rust test binaries link libpython.
extension-module = ["pyo3/extension-module"]
