[package]
name = "onnx-rs"
description = "Pure-Rust ONNX standard library: model I/O, textual format, and an extensible validator, built on the shared onnx-runtime-ir IR (see docs/ONNX_RS.md)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "protobuf", "validation", "ir"]
categories = ["science", "parser-implementations"]

[dependencies]
base64 = "0.22"
onnx-runtime-ir = { workspace = true }
onnx-runtime-loader = { workspace = true }
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
