[package]
name = "onnx-runtime-ep-cpu"
description = "CPU execution provider for the ORT 2.0 runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "cpu", "execution-provider", "inference", "runtime"]
categories = ["science", "hardware-support"]

[features]
# Opt-in vendored MLAS f32 SGEMM. Kept off by default because it builds C++/asm.
mlas = ["dep:mlas-sys"]
tracing = ["dep:onnx-runtime-tracer"]

[dependencies]
onnx-runtime-ir = { workspace = true }
onnx-runtime-ep-api = { workspace = true }
onnx-runtime-optimizer = { workspace = true }
onnx-runtime-quantization = { workspace = true }
mlas-sys = { workspace = true, optional = true }
onnx-runtime-loader = { workspace = true }
onnx-runtime-tracer = { workspace = true, optional = true }
thiserror = { workspace = true }
half = "2"
rayon = "1"
libc = "0.2"
# Pure-Rust libm (no FFI, no `cc`): supplies the correctly-rounded `erf` used by
# the `Erf` op and the fused `Gelu` kernel. A polynomial approximation was ~1e-9
# off near zero and failed the upstream conformance suite's tight tolerance.
libm = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kernels"
harness = false
